--- a/src/components/SearchUser/SearchUser.scss
+++ b/src/components/SearchUser/SearchUser.scss
@@ -1,16 +1,54 @@
 .searchForm {
   display: flex;
   justify-content: center;
-
+  padding: 0.6rem;
+  background-color: var(--color-primary);
   &__input {
-    font-size: 150%;
-    padding: 5px;
-    margin-right: 20px;
-    width: 30%;
+    font-size: 25px;
+    padding: 4px 15px;
+    margin-right: 25px;
+
+    width: 40%;
+    border: 2px solid var(--color-primary);
+    outline: none;
+    border-radius: 5px;
   }
+
   &__button {
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 1.2em;
+    padding: 0.6rem 2rem;
+    text-align: center;
+    text-decoration: none;
+    font-family: var(--font-button);
+    cursor: pointer;
+    outline: none;
+    color: var(--color-accent);
+    border: 2px solid var(--color-primary);
+    font-size: 25px;
+    display: inline-block;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+    position: relative;
+    overflow: hidden;
+
+    &:before {
+      content: '';
+      background-color: rgba(255, 255, 255, 0.5);
+      height: 100%;
+      width: 3em;
+      display: block;
+      position: absolute;
+      top: 0;
+      left: -4.5em;
+      transform: skewX(-45deg) translateX(0);
+      transition: none;
+    }
+    &:hover {
+      background-color: var(--color-accent);
+      color: #fff;
+      &:before {
+        transition: all 0.5s ease-in-out;
+        transform: skewX(-45deg) translateX(13.5em);
+      }
+    }
   }
 }
