--- a/src/components/UserDetails/UserDetails.scss
+++ b/src/components/UserDetails/UserDetails.scss
@@ -1,13 +1,37 @@
 .userDetails {
-  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: var(--color-background);
   padding: 20px;
 
-  &__image {
-    width: 100px;
-    height: 100px;
+  &__card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-accent);
+    color: white;
+    padding: 1.3rem;
+    &__image {
+      width: 110px;
+      height: 110px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin-right: 1em;
 
-    & img {
-      width: 100%;
+      & img {
+        width: 100%;
+      }
     }
+    &__content {
+      &__name {
+        font-size: 1.6em;
+        font-weight: 600;
+      }
+    }
+  }
+
+  &__links {
+    border: 1px solid blue;
   }
 }
