Made the navbar and initial landing responsive

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   --font-button: 'Mulish', sans-serif;
 }
 .pink {
-  --color-primary: #ffc1cc;
+  --color-primary: #f48fb1;
   --color-secondary: #9f7aea;
   --color-background: #fff5f7;
   --color-accent: #702459;
