--- a/src/components/SearchUser/SearchUser.scss
+++ b/src/components/SearchUser/SearchUser.scss
@@ -1,34 +1,62 @@
 .searchForm {
   display: flex;
   justify-content: center;
-  padding: 0.6rem;
-  background-color: var(--color-primary);
-  &__input {
-    font-size: 25px;
-    padding: 4px 15px;
-    margin-right: 25px;
+  margin-left: 2em;
 
-    width: 40%;
-    border: 2px solid var(--color-primary);
-    outline: none;
-    border-radius: 5px;
+  &__icon {
+    width: 20px;
+  }
+
+  &__input {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    padding: 0 10px;
+    border-radius: 4px;
+
+    & > img {
+      width: 40px;
+      margin-right: 10px;
+    }
+
+    & > input {
+      font-size: 25px;
+      background-color: inherit;
+      outline: none;
+      border: none;
+      width: 100%;
+    }
   }
 
   &__button {
-    padding: 0.6rem 2rem;
+    padding: 0.6rem 6%;
     text-align: center;
     text-decoration: none;
     font-family: var(--font-button);
     cursor: pointer;
     outline: none;
     color: var(--color-accent);
-    border: 2px solid var(--color-primary);
-    font-size: 25px;
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+      0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    border: none;
+    font-size: 1.3em;
+    font-weight: 600;
+    background-color: white;
     display: inline-block;
-    border-radius: 5px;
+    margin-left: 10px;
+    border-radius: 4px;
     transition: all 0.2s ease-in-out;
     position: relative;
     overflow: hidden;
+
+    &:disabled {
+      box-shadow: none;
+      pointer-events: none;
+      opacity: 0.6;
+      user-select: none;
+      background-color: #fad2df;
+    }
 
     &:before {
       content: '';
@@ -49,6 +77,26 @@
         transition: all 0.5s ease-in-out;
         transform: skewX(-45deg) translateX(13.5em);
       }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .searchForm {
+    margin-left: 0;
+    width: 100%;
+    padding: 0 1em;
+
+    &__input {
+      width: 100%;
+      justify-content: left;
+      flex-basis: 70%;
+    }
+
+    &__button {
+      font-size: 1em;
+      flex-basis: 30%;
+      padding: 0.6rem 2%;
     }
   }
 }
