--- a/src/components/UserDetails/UserDetails.scss
+++ b/src/components/UserDetails/UserDetails.scss
@@ -1,3 +1,36 @@
+.twoColumnLayout__content {
+  &__heading {
+    font-size: 2.2em;
+  }
+
+  &__subHeading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    & h4 {
+      text-align: center;
+      font-size: 140%;
+      font-weight: 400;
+      display: inline;
+    }
+
+    &__gif {
+      width: 75px;
+      height: auto;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .twoColumnLayout__content {
+    &__heading {
+      font-size: 1.6em;
+    }
+  }
+}
+
+/*****User Details Card*****/
 .userDetails {
   display: flex;
   align-items: center;
