Completed user details card, added some animations

--- a/src/components/TwoColumnLayout/TwoColumnLayout.scss
+++ b/src/components/TwoColumnLayout/TwoColumnLayout.scss
@@ -2,7 +2,8 @@
   width: 100%;
   padding: 2rem 2rem;
   display: flex;
-  border-bottom: 1px solid black;
+  background-image: url(../../images/Asset120.png);
+  background-size: contain;
 
   &__imageContainerBig {
     width: 40%;
