--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ body {
   --font-button: 'Mulish', sans-serif;
 }
 .pink {
-  --color-primary: #f48fb1;
+  --color-primary: #6a0136;
   --color-secondary: #9f7aea;
   --color-background: #fff5f7;
-  --color-accent: #702459;
+  --color-accent: #ed9264;
 }
