--- a/src/components/UserDetails/UserDetails.scss
+++ b/src/components/UserDetails/UserDetails.scss
@@ -1,10 +1,11 @@
 .twoColumnLayout__content {
   &__heading {
-    font-size: 2.2em;
+    font-size: 2.5em;
   }
 
   &__subHeading {
     display: flex;
+    font-size: 1.2em;
     align-items: center;
     justify-content: center;
 
@@ -27,6 +28,10 @@
     &__heading {
       font-size: 1.6em;
     }
+
+    &__subHeading {
+      font-size: 1em;
+    }
   }
 }
 
@@ -35,36 +40,106 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: var(--color-background);
-  padding: 20px;
 
   &__card {
+    border-radius: 4px;
     display: flex;
     align-items: center;
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+      0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
     justify-content: center;
-    background-color: var(--color-accent);
+    position: relative;
+    background-color: var(--color-primary);
     color: white;
-    padding: 1.3rem;
-    &__image {
-      width: 110px;
-      height: 110px;
-      border-radius: 50%;
-      overflow: hidden;
-      margin-right: 1em;
+    &__heading {
+      display: flex;
+      align-items: center;
+      position: absolute;
+      top: -50%;
+      right: 0%;
 
       & img {
-        width: 100%;
+        width: 74px;
+        display: inline-block;
+      }
+
+      & h3 {
+        color: hsla(0, 0, 0, 0.8);
+        margin-right: 10px;
+        font-size: 1.7em;
+        text-transform: uppercase;
+        display: inline-block;
+      }
+    }
+
+    padding: 1.3rem;
+    &__imageContainer {
+      // border-radius: 50%;
+      overflow: hidden;
+      margin-right: 1em;
+      padding: 5px;
+      background-color: var(--color-accent);
+
+      &__image {
+        width: 190px;
+        height: 190px;
+        // border-radius: 50%;
+        overflow: hidden;
+
+        & > img {
+          width: 100%;
+        }
       }
     }
     &__content {
+      color: var(--color-accent);
+
       &__name {
         font-size: 1.6em;
         font-weight: 600;
+        line-height: 0.9;
+      }
+      &__bio {
+        opacity: 0.9;
+      }
+
+      &__key {
+        // letter-spacing: 0.5px;
+        font-size: 1.1em;
+        font-weight: 600;
+      }
+
+      &__links {
+        margin-top: 10px;
+        &__link {
+          display: inline-block;
+          position: relative;
+          margin-right: 10px;
+
+          &__icon {
+            font-size: 2.3em;
+            color: var(--color-accent);
+          }
+
+          &__tooltip {
+            position: absolute;
+            bottom: -30%;
+            background-color: #a6cfd5;
+            font-size: 1em;
+            color: var(--color-primary);
+            font-weight: 600;
+            padding: 0 7px;
+            border-radius: 10px;
+            left: -35%;
+            transform: scale(0);
+            transition: transform 0.3s cubic-bezier(0.79, 0.27, 0.46, 1.48);
+          }
+
+          &__icon:hover + &__tooltip {
+            transform: scale(1);
+          }
+        }
       }
     }
-  }
-
-  &__links {
-    border: 1px solid blue;
   }
 }
