--- a/src/components/TwoColumnLayout/TwoColumnLayout.scss
+++ b/src/components/TwoColumnLayout/TwoColumnLayout.scss
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 2rem 2rem;
   display: flex;
+  align-items: center;
   background-image: url(../../images/Asset120.png);
   background-size: contain;
 
