--- a/src/components/RepositoryReadme/RepositoryReadme.scss
+++ b/src/components/RepositoryReadme/RepositoryReadme.scss
@@ -1,13 +1,31 @@
 .repoModal {
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  opacity: 0.5;
-  position: absolute;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 4;
+  left: 0;
+  top: 0;
+
+  &__closeIcon {
+    color: rebeccapurple;
+    background-color: white;
+    border-radius: 5px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 25px;
+    cursor: pointer;
+  }
 
   &__content {
+    padding: 1em;
     background-color: white;
-    width: 75%;
-    height: 75%;
+    border-radius: 8px;
+    overflow-y: scroll;
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 65%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
   }
 }
