--- a/src/components/Timeline/Timeline.scss
+++ b/src/components/Timeline/Timeline.scss
@@ -51,6 +51,10 @@
       cursor: pointer;
       color: var(--color-accent);
 
+      &:hover {
+        animation: shake 0.8s infinite linear;
+      }
+
       &::after {
         content: ' ';
         background-color: var(--color-primary);
@@ -89,18 +93,54 @@
   }
 }
 
+@keyframes shake {
+  0% {
+    -webkit-transform: translate(2px, 1px) rotate(0deg);
+  }
+  10% {
+    -webkit-transform: translate(-1px, -2px) rotate(-2deg);
+  }
+  20% {
+    -webkit-transform: translate(-2px, 0px) rotate(3deg);
+  }
+  30% {
+    -webkit-transform: translate(0px, 2px) rotate(0deg);
+  }
+  40% {
+    -webkit-transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    -webkit-transform: translate(-1px, 1px) rotate(-1deg);
+  }
+  60% {
+    -webkit-transform: translate(-2px, 1px) rotate(0deg);
+  }
+  70% {
+    -webkit-transform: translate(2px, 1px) rotate(-2deg);
+  }
+  80% {
+    -webkit-transform: translate(-1px, -1px) rotate(4deg);
+  }
+  90% {
+    -webkit-transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
 @media only screen and (max-width: 1023px) {
   .timeline__item__content {
-      max-width: 100%;
+    max-width: 100%;
   }
 }
 
 @media only screen and (max-width: 767px) {
   .timeline__item__content,
   .timeline__item:nth-child(odd) .timeline__item__content {
-      padding: 15px 10px;
-      text-align: center;
-      align-items: center;
+    padding: 15px 10px;
+    text-align: center;
+    align-items: center;
   }
 }
 
@@ -117,7 +157,7 @@
       &:nth-child(odd) {
         align-self: flex-start;
       }
-      
+
       &:nth-child(even) .timeline__item__content::after {
         right: auto;
         left: -7.5px;
