--- a/src/components/RepositoryReadme/RepositoryReadme.scss
+++ b/src/components/RepositoryReadme/RepositoryReadme.scss
@@ -1,3 +1,14 @@
+.readmeLoader {
+  color: white;
+  font-size: 2em;
+  text-transform: capitalize;
+  margin: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .repoModal {
   position: fixed;
   width: 100%;
@@ -7,18 +18,8 @@
   left: 0;
   top: 0;
 
-  &__closeIcon {
-    color: rebeccapurple;
-    background-color: white;
-    border-radius: 5px;
-    position: absolute;
-    top: 30px;
-    right: 20px;
-    font-size: 25px;
-    cursor: pointer;
-  }
-
   &__content {
+    position: relative;
     padding: 1.5em;
     background-color: white;
     border-radius: 8px;
@@ -26,7 +27,16 @@
     height: 90vh;
     margin: auto;
     margin-top: 30px;
-    width: 70%;
+    width: 96%;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+
+    &__closeIcon {
+      color: rebeccapurple;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 25px;
+      cursor: pointer;
+    }
   }
 }
