--- a/src/components/Timeline/Timeline.scss
+++ b/src/components/Timeline/Timeline.scss
@@ -52,7 +52,7 @@
       color: var(--color-accent);
 
       &:hover {
-        animation: shake 0.8s infinite linear;
+        animation: shake 1.1s infinite linear;
       }
 
       &::after {
@@ -101,7 +101,7 @@
     -webkit-transform: translate(-1px, -2px) rotate(-2deg);
   }
   20% {
-    -webkit-transform: translate(-2px, 0px) rotate(3deg);
+    -webkit-transform: translate(-2px, 0px) rotate(2deg);
   }
   30% {
     -webkit-transform: translate(0px, 2px) rotate(0deg);
@@ -119,7 +119,7 @@
     -webkit-transform: translate(2px, 1px) rotate(-2deg);
   }
   80% {
-    -webkit-transform: translate(-1px, -1px) rotate(4deg);
+    -webkit-transform: translate(-1px, -1px) rotate(3deg);
   }
   90% {
     -webkit-transform: translate(1px, 2px) rotate(0deg);
@@ -129,13 +129,13 @@
   }
 }
 
-@media only screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .timeline__item__content {
     max-width: 100%;
   }
 }
 
-@media only screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .timeline__item__content,
   .timeline__item:nth-child(odd) .timeline__item__content {
     padding: 15px 10px;
@@ -144,14 +144,14 @@
   }
 }
 
-@media only screen and (max-width: 490px) {
+@media screen and (max-width: 490px) {
   .timeline {
     &::before {
       left: 2px;
     }
 
     &__item {
-      width: 75%;
+      width: 85%;
       padding-left: 30px;
       padding-right: 0px;
       &:nth-child(odd) {
