--- a/src/components/RepositoryReadme/RepositoryReadme.scss
+++ b/src/components/RepositoryReadme/RepositoryReadme.scss
@@ -23,7 +23,7 @@
     padding: 1.5em;
     background-color: white;
     border-radius: 8px;
-    overflow: scroll;
+    overflow: auto;
     height: 90vh;
     margin: auto;
     margin-top: 30px;
@@ -31,7 +31,7 @@
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
 
     &__closeIcon {
-      color: rebeccapurple;
+      color: var(--color-primary);
       position: absolute;
       top: 10px;
       right: 10px;
