--- a/src/components/Timeline/Timeline.scss
+++ b/src/components/Timeline/Timeline.scss
@@ -11,6 +11,8 @@
   flex-direction: column;
   position: relative;
   background-image: url(../../images/Asset70.png);
+  // background-repeat: no-repeat;
+  // background-position: left -1%;
 
   &::before {
     content: '';
@@ -55,6 +57,19 @@
         animation: shake 1.1s infinite linear;
       }
 
+      &::before {
+        content: ' ';
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        border: 4px solid var(--color-primary);
+        position: absolute;
+        top: 50%;
+        right: -42.35px;
+        transform: translateY(-50%);
+        background-color: white;
+      }
+
       &::after {
         content: ' ';
         background-color: var(--color-primary);
@@ -85,6 +100,13 @@
       align-items: flex-start;
     }
 
+    // dots
+    &:nth-child(odd) .timeline__item__content::before {
+      right: 0%;
+      left: -42.35px;
+    }
+
+    // arrow
     &:nth-child(odd) .timeline__item__content::after {
       right: auto;
       left: -7.5px;
@@ -119,7 +141,7 @@
     -webkit-transform: translate(2px, 1px) rotate(-2deg);
   }
   80% {
-    -webkit-transform: translate(-1px, -1px) rotate(3deg);
+    -webkit-transform: translate(-1px, -1px) rotate(2deg);
   }
   90% {
     -webkit-transform: translate(1px, 2px) rotate(0deg);
@@ -138,7 +160,7 @@
 @media screen and (max-width: 767px) {
   .timeline__item__content,
   .timeline__item:nth-child(odd) .timeline__item__content {
-    padding: 15px 10px;
+    padding: 15px 12px;
     text-align: center;
     align-items: center;
   }
@@ -147,7 +169,12 @@
 @media screen and (max-width: 490px) {
   .timeline {
     &::before {
-      left: 2px;
+      left: 13px;
+    }
+
+    &__item__content,
+    &__item:nth-child(odd) &__item__content {
+      margin-left: 13px;
     }
 
     &__item {
@@ -156,6 +183,12 @@
       padding-right: 0px;
       &:nth-child(odd) {
         align-self: flex-start;
+      }
+
+      &:nth-child(even) .timeline__item__content::before,
+      &:nth-child(odd) .timeline__item__content::before {
+        left: -40px;
+        right: 0;
       }
 
       &:nth-child(even) .timeline__item__content::after {
