Minor style tweaks and added User Not Found Fallback

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,6 +2,7 @@
   text-align: center;
   color: var(--color-background);
   color: black;
+  margin-top: auto;
 
   &__link {
     color: var(--color-primary);
