--- a/src/components/Timeline/Timeline.scss
+++ b/src/components/Timeline/Timeline.scss
@@ -19,6 +19,7 @@
     text-transform: uppercase;
     background-color: var(--color-primary);
     margin-bottom: 1em;
+    z-index: 6;
   }
 
   &::before {
@@ -124,37 +125,37 @@
 
 @keyframes shake {
   0% {
-    -webkit-transform: translate(2px, 1px) rotate(0deg);
+    -webkit-transform: translate(0px, 0px) rotate(0deg);
   }
   10% {
-    -webkit-transform: translate(-1px, -2px) rotate(-2deg);
+    -webkit-transform: translate(-1px, -1px) rotate(-1deg);
   }
   20% {
-    -webkit-transform: translate(-2px, 0px) rotate(2deg);
+    -webkit-transform: translate(-1px, 0px) rotate(1deg);
   }
   30% {
-    -webkit-transform: translate(0px, 2px) rotate(0deg);
+    -webkit-transform: translate(0px, 1px) rotate(0deg);
   }
   40% {
-    -webkit-transform: translate(1px, -1px) rotate(1deg);
+    -webkit-transform: translate(1px, 0px) rotate(1deg);
   }
   50% {
-    -webkit-transform: translate(-1px, 1px) rotate(-1deg);
+    -webkit-transform: translate(0px, -1px) rotate(-1deg);
   }
   60% {
-    -webkit-transform: translate(-2px, 1px) rotate(0deg);
+    -webkit-transform: translate(-1px, 0px) rotate(0deg);
   }
   70% {
-    -webkit-transform: translate(2px, 1px) rotate(-2deg);
+    -webkit-transform: translate(0px, 1px) rotate(-1deg);
   }
   80% {
-    -webkit-transform: translate(-1px, -1px) rotate(2deg);
+    -webkit-transform: translate(-1px, 0px) rotate(1deg);
   }
   90% {
-    -webkit-transform: translate(1px, 2px) rotate(0deg);
+    -webkit-transform: translate(0px, -1px) rotate(0deg);
   }
   100% {
-    -webkit-transform: translate(1px, -2px) rotate(-1deg);
+    -webkit-transform: translate(1px, 0px) rotate(-1deg);
   }
 }
 
@@ -175,6 +176,11 @@
 
 @media screen and (max-width: 490px) {
   .timeline {
+    &__heading {
+      text-align: left;
+      padding-left: 13px;
+    }
+
     &::before {
       left: 13px;
     }
